Fixed bad filenames

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -69,10 +69,10 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "01 inbox/20200809_1337.md.md",
-    "01 inbox/twelve-factor-app.md.md",
-    "01 inbox/zettlekasten-example-inbox.md.md",
-    "Untitled.md",
-    "03 index/zettlekasten-example-topic.md.md"
+    "03 index/zettlekasten-example-topic.md",
+    "02 reference/zettlekasten-example-reference.md",
+    "01 inbox/zettlekasten-example-inbox.md",
+    "01 inbox/twelve-factor-app.md",
+    "01 inbox/20200809_1337.md"
   ]
 }
